tests/neg/i6622f.check
-- Error: tests/neg/i6622f.scala:6:8 -----------------------------------------------------------------------------------
6 |    fail(println("foo")) // error
  |    ^^^^^^^^^^^^^^^^^^^^
  |    failed: println("foo") ...
